  * Added maxfiles option to options section of asterisk.conf which allows you to specify
     what Asterisk should set as the maximum number of open files when it loads.
  * Added the jittertargetextra configuration option.
  * Added a new CDR module, cdr_sqlite3_custom.
  * The cdr_manager module has a [mappings] feature, like cdr_custom,
    to add fields to the manager event from the CDR variables.
  * Added a new realtime configuration module, res_config_sqlite
  * Added support for setting the CoS for VLAN traffic (802.1p).  See the sample
     configuration files for the IP channel drivers.  The new option is "cos".
     This information is also documented in doc/qos.tex, or the IP Quality of Service
     section of asterisk.pdf.
  * When originating a call using AMI or pbx_spool that fails the reason for failure
     will now be available in the failed extension using the REASON dialplan variable.
  * Added support for reading the TOUCH_MONITOR_PREFIX channel variable.
     It allows you to configure a prefix for auto-monitor recordings.
  * Added support for writing and running your dialplan in lua.  See
     configs/extensions.lua.sample for examples of how to do this.
  * A new extension pattern matching algorithm, based on a trie, is introduced
    here, that could noticeably speed up mid-sized to large dialplans.
    It is NOT used by default, as duplicating the behaviour of the old pattern
    matcher is still under development. A config file option, in extensions.conf,
    in the [general] section, called "extenpatternmatchingnew", is by default
    set to false; setting that to true will force the use of the new algorithm.
    Also, the cli commands "dialplan set extenpatternmatchingnew true/false" can
    be used to switch the algorithms at run time.
  * A new option when starting a remote asterisk (rasterisk, asterisk -r) for
    specifying which socket to use to connect to the running Asterisk daemon
    (-s)
